examples/island_cluster_anywhere_in_gcp_design/manifests/k8s.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.19
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: 128Mi
          limits:
            cpu: "100m"
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: whereami
spec:
  type: ClusterIP
  selector:
    app: whereami
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: l7-ilb
spec:
  gatewayClassName: gke-l7-rilb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  addresses:
  - type: NamedAddress
    value: gke-spoke-1-l7-rilb-ip
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: whereami
spec:
  parentRefs:
  - kind: Gateway
    name: l7-ilb
  rules:
  - backendRefs:
    - name: whereami
      port: 80
